message ParseError {
	optional uint32 errorNumber = 1;
	optional string errorMessage = 2;
}